app-whatismyip.yaml
apiVersion: v1
kind: Pod
metadata:
  name: whatismyip-app
  labels:
    app: whatismyip
spec:
  containers:
  - name: whatismyip
    image: registry.local.test/whatismyip-kaniko:latest
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
  restartPolicy: Never
