kaniko.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kaniko-build
spec:
  containers:
  - name: kaniko
    image: gcr.io/kaniko-project/executor:latest
    args:
    - "--dockerfile=Dockerfile"
    - "--context=/workspace"
    - "--destination=localhost:33237/whatismyip-kaniko:latest"
    - "--insecure"
    - "--skip-tls-verify"
    volumeMounts:
    - name: build-context
      mountPath: /workspace
  restartPolicy: Never
  volumes:
  - name: build-context
    hostPath:
      path: .
      type: Directory
