ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"   # <-- Allow unlimited size
    cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"
spec:
  rules:
    - host: registry.local.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 80
  tls:
    - hosts:
        - registry.local.test
      secretName: registry-tls-secret
